fix: Various fixes and improvements